@@ -9,3 +9,7 @@ https://gluonhq.com/products/javafx/
 
 다운로드 19 version
 https://gluonhq.com/products/scene-builder/
+
+help - > marketplace -> javafx down
+
+--module-path""--add-modules=javafx.controls,javafx.fxml
